<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome to Heads Up Driving!</string>
    <string name="add_user">Add User</string>
    <string name="connect_to_wheel">Connect To Wheel</string>
    <string name="start_driving">Start Driving</string>
    <string name="user_name">User Name</string>
    <string name="age">Age</string>
    <string name="Sex">Sex</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Save_User">Save User</string>
    <string name="AboutHUD">About HUD</string>
    <string name="connecting_text">Connecting To Wheel!</string>
    <string name="drive_safe">HUD wants you to drive safely:</string>
    <string name="text_drive">Don\'t Text and Drive!</string>
    <string name="confirm_info_title">Confirm Information</string>
    <string name="confirm_button">My Information is Correct</string>
    <string name="home_button">Go Home</string>
    <string name="alarm_button">Test Alarm</string>
    <string name="connect">Connect to Wheel</string>
    <string name="select_instructions">Select the device named ESP 32, and then select Start Connecting</string>
    <string name="start">Start</string>
    <string name="self_discover">Make Device Available</string>
    <string name="find_devices">Search for Device</string>
    <string name="testing">Test Data</string>
    <string name="strt_test_1">Start Test Set 1</string>
    <string name="strt_test_2">Start Test Set 2</string>
    <string name="strt_test_3">Start Test Set 3</string>
</resources>
