<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2C009688"
        android:text="@string/add_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Welcome_message"
        app:layout_constraintStart_toStartOf="@+id/Welcome_message"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_message"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#2C009688"
        android:text="@string/connect_to_wheel"
        app:layout_constraintEnd_toEndOf="@+id/add_user_button"
        app:layout_constraintStart_toStartOf="@+id/add_user_button"
        app:layout_constraintTop_toBottomOf="@+id/add_user_button" />

    <Button
        android:id="@+id/start_driving_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#2D009688"
        android:text="@string/start_driving"
        app:layout_constraintEnd_toEndOf="@+id/connect_button"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/connect_button"
        app:layout_constraintTop_toBottomOf="@+id/connect_button" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2A009688"
        android:text="@string/AboutHUD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_driving_button" />

</androidx.constraintlayout.widget.ConstraintLayout>